more changes to url

--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ SUPABASE_CONTACTS_TABLE=contacts          # keep unless you renamed the table
 # SUPABASE_MESSAGES_TABLE=messages 
 # SUPABASE_USERS_TABLE=users 
 
-PORT=4000                                 # change if you prefer
+PORT=10000                                 # change if you prefer
 
 # local testing port
-# VITE_API_BASE_URL=http://localhost:4000   # used by React app locally
+# VITE_API_BASE_URL=http://localhost:10000   # used by React app locally
 
-
-VITE_API_BASE_URL=https://supabase.com/dashboard/project/zdcszhtjnatxlsmiozac
+# hosted server
+VITE_API_BASE_UR=https://week07-assignment-1-new.onrender.com/
 
