even more changes to env.

--- a/.env
+++ b/.env
@@ -12,7 +12,8 @@ SUPABASE_CONTACTS_TABLE=contacts          # keep unless you renamed the table
 PORT=4000                                 # change if you prefer
 
 # local testing port
-VITE_API_BASE_URL=http://localhost:4000   # used by React app locally
+# VITE_API_BASE_URL=http://localhost:4000   # used by React app locally
 
 
 
+VITE_API_BASE_URL=https://week07-assignment-1-new.onrender.com
